# burn_jepa

./: .gitignore  Cargo.toml  README.md
.github/workflows/: deploy-pages.yml  test.yml
benches/: autogaze_sparse_jepa_pipeline.rs  feature_memory.rs  highres_anyup_pca_pipeline.rs  sparse_pipeline.rs  ttt_training.rs
configs/deploy/: vjepa21-base-bpk-export.toml  vjepa21-ttt-bpk-export.toml
configs/production/: vjepa21-autogaze-mask-data.toml  vjepa21-base-sparse-long-rollout-verylong-cuda.toml  vjepa21-image2video-stage2-last2-low-lr-cuda.toml  vjepa21-image2video-stage2-norms-low-lr-cuda.toml  vjepa21-ttt-dense-eval-stable-cuda.toml  vjepa21-ttt-final-eval-cuda.toml  vjepa21-ttt-long-rollout-adversarial-stitch-4x-cuda.toml  vjepa21-ttt-long-rollout-adversarial-stitch-reset-4x-cuda.toml  vjepa21-ttt-long-rollout-cactus-repeat-8x-cuda.toml  vjepa21-ttt-long-rollout-cactus-repeat-reset16-cuda.toml  vjepa21-ttt-long-rollout-cactus-repeat-reset32-cuda.toml  vjepa21-ttt-long-rollout-carry-forever-alibi-adversarial-8x-cuda.toml  vjepa21-ttt-long-rollout-carry-forever-alibi-cactus-64x-cuda.toml  vjepa21-ttt-long-rollout-continuous-4x-cuda.toml  vjepa21-ttt-long-rollout-dense-eval-cuda.toml  vjepa21-ttt-long-rollout-eval-cuda.toml  vjepa21-ttt-long-rollout-reset-window-cuda.toml  vjepa21-ttt-long-rollout-sigreg-cuda.toml  vjepa21-ttt-long-rollout-stitched-4x-cuda.toml  vjepa21-ttt-long-rollout-stitched-reset-4x-cuda.toml  vjepa21-ttt-long-rollout-verylong-cuda.toml  vjepa21-ttt-stage1-adapter-cuda.toml  vjepa21-ttt-stage1-stream-tbptt-carry-forever-alibi-cuda.toml  vjepa21-ttt-stage1-stream-tbptt-cuda.toml  vjepa21-ttt-stage1-stream-tbptt-inplace-mlp-every-other-cuda.toml  vjepa21-ttt-stage1-stream-tbptt-inplace-mlp-strict-thirds-cuda.toml  vjepa21-ttt-stage1-stream-tbptt-inplace-mlp-thirds-cuda.toml  vjepa21-ttt-stage1-stream-tbptt-longstable-cuda.toml  vjepa21-ttt-stage1-stream-tbptt-sigreg-ablation-high-cuda.toml  vjepa21-ttt-stage1-stream-tbptt-sigreg-ablation-low-cuda.toml  vjepa21-ttt-stage1-stream-tbptt-sigreg-ablation-off-cuda.toml  vjepa21-ttt-stage1-stream-tbptt-sigreg-cuda.toml  vjepa21-ttt-stage1-stream-tbptt-stable-cuda.toml  vjepa21-ttt-stage1-stream-tbptt-verified-cuda.toml  vjepa21-ttt-stage1-stream-tbptt-verified-lowlr-cuda.toml  vjepa21-ttt-stage2-last2-low-lr-cuda.toml  vjepa21-ttt-stage2-norms-low-lr-cuda.toml  vjepa21-ttt-stage2-unfrozen-low-lr-cuda.toml  vjepa21-ttt-stream-eval-cuda.toml  vjepa21-ttt-stream-eval-fast-cuda.toml  (+1 more)
configs/wasm/: tiny-bpk-export.toml
crates/bevy_burn/: Cargo.toml  README.md
crates/bevy_burn/src/: buffer_to_rgba32f.wgsl  gpu_burn_to_bevy.rs  lib.rs
crates/bevy_burn_jepa/: Cargo.toml  README.md  package.json
crates/bevy_burn_jepa/src/: lib.rs  main.rs
crates/bevy_burn_jepa/tests/: static-source.spec.mjs
crates/bevy_burn_jepa/www/: index.html
crates/bevy_jepa/: Cargo.toml  README.md  package-lock.json  package.json  playwright.config.mjs
crates/bevy_jepa/benches/: viewer_pipeline.rs
crates/bevy_jepa/examples/: fps_stability.rs  gpu_inference_case.rs  perf_matrix.rs
crates/bevy_jepa/src/: config.rs  display.rs  lib.rs  main.rs  mask.rs  metrics.rs  model_loading.rs  perf.rs  platform.rs  tests.rs
crates/bevy_jepa/tests/: static-source.spec.mjs  wasm-api-smoke.mjs  wasm-smoke.spec.mjs
crates/bevy_jepa/www/: index.html
crates/burn_anyup/: Cargo.toml  README.md
crates/burn_anyup/benches/: anyup_forward.rs
crates/burn_anyup/src/: attention.rs  config.rs  layers.rs  lib.rs  loading.rs  model.rs  rope.rs  sparse.rs  tensor_ops.rs
crates/burn_anyup/tests/: anyup.rs  sparse_webgpu.rs
crates/burn_anyup/tests/fixtures/: anyup_real_parity.py  anyup_tiny_parity.py
crates/burn_jepa_reconstruction/: Cargo.toml  README.md
crates/burn_jepa_reconstruction/benches/: reconstruction_forward.rs
crates/burn_jepa_reconstruction/src/: config.rs  lib.rs  metrics.rs  model.rs  train.rs
crates/burn_jepa_reconstruction/tests/: reconstruction.rs
docs/: completion-audit.md  cuda-benchmark.md  e2e-benchmark-results.md  highres-anyup-pca-pipeline.md  interframe-feature-memory.md  production-training-runbook.md  production-ttt-status.md  ttt-training.md
docs/papers/: vjepa21_ttt_sparse_temporal_preprint.tex
docs/workflows/: cuda-benchmark.yml
examples/: README.md  highres_breakdown.rs  reconstruction_e2e.rs  video_gallery_e2e.rs
src/: autogaze.rs  cli.rs  config.rs  dataset.rs  experiment.rs  feature_memory.rs  highres_pipeline.rs  lib.rs  model.rs  model_package.rs  nodes.rs  pca.rs  pipeline.rs  positional.rs  quantization.rs  reconstruction_training.rs  runtime.rs  safetensors_io.rs  sparse_feature_memory.rs  sparse_patchify.rs  temporal.rs  tokens.rs  training.rs  ttt.rs  viewer.rs  wasm.rs
src/training/: batch.rs  config.rs  dense.rs  mask.rs  model_io.rs  report.rs
src/training/ttt/: eval.rs  loss.rs  metrics.rs  mod.rs  step.rs
src/ttt/: config.rs  encoder.rs  layer.rs  model.rs  state.rs
tests/: benchmark_report.rs  experiment.rs  feature_memory.rs  feature_memory_webgpu.rs  gpu_training_smoke.rs  highres_anyup_pca_pipeline.rs  highres_pipeline_webgpu.rs  numerical_parity.rs  sparse_patchify_cuda.rs  sparse_patchify_wgpu.rs  sparse_pipeline.rs  temporal.rs  ttt_training.rs
tests/fixtures/: vjepa21_torchhub_real_micro_forward.py  vjepa_hf_real_micro_forward.py  vjepa_hf_tiny_parity.py  vjepa_tiny_parity.py
tools/: video_feature_gallery.py
web/: README.md
