[workspace]
members = [".", "crates/bevy_burn_jepa"]
default-members = ["."]
resolver = "3"

[package]
name = "burn_jepa"
description = "Burn-native sparse-token V-JEPA 2.1 inference and training primitives"
version = "0.21.0"
edition = "2024"
rust-version = "1.92"
authors = ["mosure <mitchell@mosure.me>"]
license = "MIT OR Apache-2.0"
homepage = "https://github.com/mosure/burn_jepa"
repository = "https://github.com/mosure/burn_jepa"
documentation = "https://docs.rs/burn_jepa"
readme = "README.md"
categories = ["computer-vision", "science", "wasm"]
keywords = ["burn", "jepa", "sparse", "video", "vision"]
exclude = ["/.github/", "/crates/bevy_burn_jepa/", "/web/"]

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["ndarray", "webgpu"]
ndarray = ["burn/ndarray"]
webgpu = ["burn/webgpu", "burn_autogaze/webgpu"]
wgpu = ["burn/wgpu", "burn-store/wgpu"]
cuda = ["burn/cuda", "burn-store/cuda", "burn_autogaze/cuda"]
wasm = [
  "webgpu",
  "dep:console_error_panic_hook",
  "dep:js-sys",
  "dep:wasm-bindgen",
  "dep:wasm-bindgen-futures",
  "dep:web-sys",
]
bevy-web-demo = ["wasm"]
sparse-patchify-wgpu = ["dep:burn_flex_gmm", "burn_flex_gmm/wgpu-kernel"]

[dependencies]
anyhow = "1"
burn = { version = "0.21.0", default-features = false, features = ["fusion", "std"] }
burn-store = { version = "0.21.0", default-features = false, features = ["pytorch", "safetensors", "std"] }
burn_flex_gmm = { version = "0.21.0", default-features = false, optional = true }
half = "2"
safetensors = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = { version = "0.1", optional = true }
js-sys = { version = "0.3", optional = true }
wasm-bindgen = { version = "0.2", optional = true }
wasm-bindgen-futures = { version = "0.4", optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies.web-sys]
version = "0.3"
optional = true
features = ["console"]

[dev-dependencies]
burn_autogaze = { version = "0.21.2", default-features = false, features = ["ndarray"] }
criterion = "0.8.2"
tempfile = "3"

[[bench]]
name = "sparse_pipeline"
harness = false

[[bench]]
name = "autogaze_sparse_jepa_pipeline"
harness = false
required-features = ["ndarray", "sparse-patchify-wgpu"]

[profile.dev]
opt-level = 3
debug-assertions = false
overflow-checks = false
incremental = false
