[workspace]
members = [".", "crates/bevy_burn_jepa"]
default-members = ["."]
resolver = "3"

[package]
name = "burn_jepa"
description = "Burn-native sparse-token V-JEPA 2.1 inference and training primitives"
version = "0.21.0"
edition = "2024"
rust-version = "1.92"
authors = ["mosure <mitchell@mosure.me>"]
license = "MIT OR Apache-2.0"
homepage = "https://github.com/mosure/burn_jepa"
repository = "https://github.com/mosure/burn_jepa"
documentation = "https://docs.rs/burn_jepa"
readme = "README.md"
categories = ["computer-vision", "science", "wasm"]
keywords = ["burn", "jepa", "sparse", "video", "vision"]
exclude = ["/.github/", "/crates/bevy_burn_jepa/", "/web/"]

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["ndarray", "webgpu"]
ndarray = ["burn/ndarray"]
webgpu = ["burn/webgpu"]
wgpu = ["burn/wgpu", "burn-store/wgpu"]
cuda = ["burn/cuda", "burn-store/cuda"]
autogaze = ["dep:burn_autogaze"]
autogaze-ndarray = ["autogaze", "burn_autogaze/ndarray"]
autogaze-webgpu = ["autogaze", "burn_autogaze/webgpu"]
autogaze-cuda = ["autogaze", "burn_autogaze/cuda"]
wasm = [
  "webgpu",
  "dep:console_error_panic_hook",
  "dep:js-sys",
  "dep:wasm-bindgen",
  "dep:wasm-bindgen-futures",
  "dep:web-sys",
]
bevy-web-demo = ["wasm"]
sparse-patchify-wgpu = ["wgpu", "dep:burn_flex_gmm", "burn_flex_gmm/wgpu-kernel"]
sparse-patchify-cuda = [
  "cuda",
  "dep:burn-backend",
  "dep:burn-fusion",
  "dep:burn-ir",
  "dep:burn_flex_gmm",
  "burn_flex_gmm/cuda-kernel",
]

[dependencies]
anyhow = "1"
burn = { version = "0.21.0", default-features = false, features = ["autodiff", "fusion", "std"] }
burn-backend = { version = "0.21.0", default-features = false, optional = true }
burn-fusion = { version = "0.21.0", default-features = false, optional = true }
burn-ir = { version = "0.21.0", default-features = false, optional = true }
burn-store = { version = "0.21.0", default-features = false, features = ["pytorch", "safetensors", "std"] }
burn_autogaze = { version = "0.21.5", default-features = false, optional = true }
burn_flex_gmm = { version = "0.21.1", default-features = false, optional = true }
clap = { version = "4.6", features = ["derive"] }
half = "2"
image = { version = "0.25", default-features = false, features = ["jpeg", "png"] }
safetensors = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.9"

[[bin]]
name = "burn-jepa"
path = "src/bin/burn-jepa.rs"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = { version = "0.1", optional = true }
js-sys = { version = "0.3", optional = true }
wasm-bindgen = { version = "0.2", optional = true }
wasm-bindgen-futures = { version = "0.4", optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies.web-sys]
version = "0.3"
optional = true
features = ["console"]

[dev-dependencies]
criterion = "0.8.2"
tempfile = "3"

[[bench]]
name = "sparse_pipeline"
harness = false

[[bench]]
name = "autogaze_sparse_jepa_pipeline"
harness = false
required-features = ["autogaze"]

[[bench]]
name = "ttt_training"
harness = false

[profile.dev]
opt-level = 3
debug-assertions = false
overflow-checks = false
incremental = false
