[workspace]
members = [".", "crates/bevy_jepa", "crates/burn_anyup"]
default-members = ["."]
resolver = "3"

[package]
name = "burn_jepa"
description = "Burn-native sparse-token V-JEPA 2.1 inference and training primitives"
version = "0.21.0"
edition = "2024"
rust-version = "1.92"
authors = ["mosure <mitchell@mosure.me>"]
license = "MIT OR Apache-2.0"
homepage = "https://github.com/mosure/burn_jepa"
repository = "https://github.com/mosure/burn_jepa"
documentation = "https://docs.rs/burn_jepa"
readme = "README.md"
categories = ["computer-vision", "science", "wasm"]
keywords = ["burn", "jepa", "sparse", "video", "vision"]
exclude = ["/.github/", "/crates/bevy_jepa/", "/web/"]

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["ndarray", "webgpu"]
ndarray = ["burn/ndarray", "burn_anyup/ndarray"]
flex = ["burn/flex", "burn_anyup/flex"]
dispatch = ["burn/dispatch", "burn_anyup/dispatch"]
webgpu = ["burn/webgpu", "burn_anyup/webgpu"]
wgpu = ["burn/wgpu", "burn-store/wgpu", "burn_anyup/wgpu"]
cuda = ["burn/cuda", "burn-store/cuda", "burn_anyup/cuda"]
autogaze = ["dep:burn_autogaze"]
autogaze-ndarray = ["autogaze", "burn_autogaze/ndarray"]
autogaze-webgpu = ["autogaze", "burn_autogaze/webgpu"]
autogaze-cuda = ["autogaze", "burn_autogaze/cuda"]
wasm = [
  "webgpu",
  "dep:console_error_panic_hook",
  "dep:js-sys",
  "dep:wasm-bindgen",
  "dep:wasm-bindgen-futures",
  "dep:web-sys",
]
bevy-web-demo = ["wasm"]
sparse-patchify-wgpu = [
  "sparse-feature-memory-wgpu",
  "dep:burn-backend",
  "dep:burn-fusion",
  "dep:burn-ir",
  "dep:burn_flex_gmm",
  "burn_flex_gmm/wgpu-kernel",
]
sparse-patchify-cuda = [
  "sparse-feature-memory-cuda",
  "dep:burn-backend",
  "dep:burn-fusion",
  "dep:burn-ir",
  "dep:burn_flex_gmm",
  "burn_flex_gmm/cuda-kernel",
]
sparse-feature-memory-wgpu = [
  "wgpu",
  "dep:burn-backend",
  "dep:burn-cubecl",
  "dep:burn-fusion",
  "dep:burn-ir",
  "dep:burn-wgpu",
]
sparse-feature-memory-cuda = [
  "cuda",
  "dep:burn-backend",
  "dep:burn-cubecl",
  "dep:burn-cuda",
  "dep:burn-fusion",
  "dep:burn-ir",
]

[dependencies]
anyhow = "1"
burn = { version = "0.21.0", default-features = false, features = ["autodiff", "fusion", "std"] }
burn-backend = { version = "0.21.0", default-features = false, optional = true }
burn-cubecl = { version = "0.21.0", default-features = false, features = ["fusion", "std"], optional = true }
burn-cuda = { version = "0.21.0", default-features = false, features = ["fusion", "std"], optional = true }
burn-fusion = { version = "0.21.0", default-features = false, optional = true }
burn-ir = { version = "0.21.0", default-features = false, optional = true }
burn-store = { version = "0.21.0", default-features = false, features = ["burnpack", "pytorch", "safetensors", "std"] }
burn_anyup = { path = "crates/burn_anyup", version = "0.21.0", default-features = false }
burn_autogaze = { version = "0.21.6", default-features = false, optional = true }
burn_flex_gmm = { version = "0.21.1", default-features = false, optional = true }
ciborium = "0.2"
clap = { version = "4.6", features = ["derive"] }
half = "2"
image = { version = "0.25", default-features = false, features = ["jpeg", "png"] }
safetensors = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
toml = "0.9"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
ureq = "2.12"

[[bin]]
name = "burn-jepa"
path = "src/bin/burn-jepa.rs"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = { version = "0.1", optional = true }
js-sys = { version = "0.3", optional = true }
wasm-bindgen = { version = "0.2", optional = true }
wasm-bindgen-futures = { version = "0.4", optional = true }

[target.'cfg(all(not(target_arch = "wasm32"), not(target_os = "macos")))'.dependencies.burn-wgpu]
version = "0.21.0"
optional = true
default-features = false
features = ["fusion", "std", "vulkan"]

[target.'cfg(all(not(target_arch = "wasm32"), target_os = "macos"))'.dependencies.burn-wgpu]
version = "0.21.0"
optional = true
default-features = false
features = ["fusion", "std", "metal"]

[target.'cfg(target_arch = "wasm32")'.dependencies.burn-wgpu]
version = "0.21.0"
optional = true
default-features = false
features = ["fusion", "std", "webgpu"]

[target.'cfg(target_arch = "wasm32")'.dependencies.web-sys]
version = "0.3"
optional = true
features = ["Window", "Performance", "Response", "console"]

[dev-dependencies]
criterion = "0.8.2"
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "tiff"] }
tempfile = "3"

[[bench]]
name = "sparse_pipeline"
harness = false
required-features = ["ndarray"]

[[bench]]
name = "autogaze_sparse_jepa_pipeline"
harness = false
required-features = ["autogaze", "ndarray"]

[[bench]]
name = "ttt_training"
harness = false

[[bench]]
name = "feature_memory"
harness = false

[[bench]]
name = "highres_anyup_pca_pipeline"
harness = false

[[example]]
name = "video_gallery_e2e"
path = "examples/video_gallery_e2e.rs"
required-features = ["ndarray"]

[profile.dev]
opt-level = 3
debug-assertions = false
overflow-checks = false
incremental = false
